fixing overflow-x and section of aboutme

--- a/src/sass/aboutme.scss
+++ b/src/sass/aboutme.scss
@@ -1,3 +1,10 @@
+section {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transform: translateY(-100px);
+}
 .aboutme {
     span {
         font-family: cursive;
@@ -5,7 +12,6 @@
         display: block;
     }
     a {
-        color: black;
         text-decoration: none;
     }
 }
