--- a/src/sass/frontpage.scss
+++ b/src/sass/frontpage.scss
@@ -2,7 +2,7 @@
 
 #frontpage {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
